# RUST-with-ROCKET

./: README.md
backend/: .env  Cargo.toml  readme.md  testing_db.db
backend/migrations/2023-08-17-160831_person/: up.sql
backend/src/: main.rs  schema.rs
backend/src/controller/: person_controller.rs
backend/src/filter/: mod.rs
backend/src/helper/: db_conn.rs
backend/src/middleware/: cors.rs  custome.rs  mod.rs
backend/src/model/: mod.rs  person_model.rs
backend/src/route/: mod.rs  person_route.rs
frontend/: package-lock.json  package.json
frontend/src/components/: GetData.jsx  Myform.jsx  PostData.jsx  Single.jsx
