[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
traitobject = { git = "https://github.com/reem/rust-traitobject.git" }



[dependencies]
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenv = "0.15"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rocket_cors = "0.4"
async-trait = "0.1.50"